Bug 157768 - Highlighted no-break space not rendered in pdf and print-preview
Summary: Highlighted no-break space not rendered in pdf and print-preview
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.2.1 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Formatting-Mark
  Show dependency treegraph
 
Reported: 2023-10-14 10:09 UTC by phv
Modified: 2023-11-29 16:46 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Text document with different space characters (11.49 KB, application/vnd.oasis.opendocument.text)
2023-10-14 10:09 UTC, phv
Details
Pdf document with different space characters (exported from LibreOffice) (15.30 KB, application/pdf)
2023-10-14 10:10 UTC, phv
Details
Same pdf document with different space characters (exported from Word) (43.03 KB, application/pdf)
2023-10-14 10:12 UTC, phv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description phv 2023-10-14 10:09:01 UTC
Created attachment 190204 [details]
Text document with different space characters

Hello,

In the last versions of LibreOffice Writer, the no-break space character does not render any highlighting when the document is print-previewed or exported in pdf.

The normal whitespace and narrow non-break space characters are still highlighted in both cases.

Steps to reproduce:
1. Open LibreOffice Writer 7.6.2.1.
2. Type a text with no-break space character inside.
3. Open the "Character... menu", then "Highlighting".
4. Choose a color then click on "OK".
5. Open "File" menu then "Print preview".

Actual result:
The highlighting is not continuous on the text.

Expected result:
The highlighting should be continuous on the text.
Comment 1 phv 2023-10-14 10:10:01 UTC
Created attachment 190205 [details]
Pdf document with different space characters (exported from LibreOffice)
Comment 2 phv 2023-10-14 10:12:33 UTC
Created attachment 190206 [details]
Same pdf document with different space characters (exported from Word)
Comment 3 m_a_riosv 2023-10-14 11:20:24 UTC
Reproducible
Version: 7.6.1.2 (X86_64) / LibreOffice Community
Build ID: f5defcebd022c5bc36bbb79be232cb6926d8f674
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
and
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9eb419b0b0f019f5fbc48ff1a11977e8b041edee
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo

It happens only with Menu/Insert/Formatting mark – No-break space, the first option.

Regression from
Version: 7.5.7.1 (X86_64) / LibreOffice Community
Build ID: 47eb0cf7efbacdee9b19ae25d6752381ede23126
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 4 BogdanB 2023-10-14 11:50:42 UTC
 d20eb4bc5de6dc0711b78cbbebfa678229f3c2ab is the first bad commit
commit d20eb4bc5de6dc0711b78cbbebfa678229f3c2ab
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Apr 4 08:38:00 2023 +0200

    source 28675af84ae8e2342bd78be3696dc09de6ce5cc5
    
    source 28675af84ae8e2342bd78be3696dc09de6ce5cc5

 instdir/program/libswlo.so                         | Bin 23290432 -> 23295504 bytes
 instdir/program/libswuilo.so                       | Bin 2962904 -> 2962904 bytes
 instdir/program/libutllo.so                        | Bin 2165776 -> 2165776 bytes
 instdir/program/setuprc                            |   2 +-
 instdir/program/versionrc                          |   2 +-
 instdir/share/config/images_breeze.zip             | Bin 1979266 -> 1979266 bytes
 instdir/share/config/images_breeze_dark.zip        | Bin 1976109 -> 1976109 bytes
 instdir/share/config/images_breeze_dark_svg.zip    | Bin 1629910 -> 1629910 bytes
 instdir/share/config/images_breeze_svg.zip         | Bin 1627450 -> 1627450 bytes
 instdir/share/config/images_colibre.zip            | Bin 2850364 -> 2850364 bytes
 instdir/share/config/images_colibre_dark.zip       | Bin 2747641 -> 2747641 bytes
 instdir/share/config/images_colibre_dark_svg.zip   | Bin 2988649 -> 2988649 bytes
 instdir/share/config/images_colibre_svg.zip        | Bin 3183165 -> 3183165 bytes
 instdir/share/config/images_elementary.zip         | Bin 4313074 -> 4313074 bytes
 instdir/share/config/images_elementary_svg.zip     | Bin 5593412 -> 5593412 bytes
 instdir/share/config/images_karasa_jaga.zip        | Bin 5022891 -> 5022891 bytes
 instdir/share/config/images_karasa_jaga_svg.zip    | Bin 19414312 -> 19414312 bytes
 instdir/share/config/images_sifr.zip               | Bin 2368922 -> 2368922 bytes
 instdir/share/config/images_sifr_dark.zip          | Bin 2338060 -> 2338060 bytes
 instdir/share/config/images_sifr_dark_svg.zip      | Bin 2359004 -> 2359004 bytes
 instdir/share/config/images_sifr_svg.zip           | Bin 2361529 -> 2361529 bytes
 instdir/share/config/images_sukapura.zip           | Bin 2970890 -> 2970890 bytes
 instdir/share/config/images_sukapura_dark.zip      | Bin 2896896 -> 2896896 bytes
 instdir/share/config/images_sukapura_dark_svg.zip  | Bin 4582258 -> 4582258 bytes
 instdir/share/config/images_sukapura_svg.zip       | Bin 4594330 -> 4594330 bytes
 .../modules/swriter/ui/optcompatpage.ui            |   1 +
 instdir/share/registry/main.xcd                    |   2 +-
 27 files changed, 4 insertions(+), 3 deletions(-)
Comment 5 BogdanB 2023-10-14 11:52:13 UTC
Dolezal, I added you on this bug, seems to be a regression here. Can you take a look?

author	Vojtěch Doležal <dolezvo1@cvut.cz>	2023-03-25 13:01:30 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2023-04-04 08:23:18 +0200
commit 28675af84ae8e2342bd78be3696dc09de6ce5cc5 (patch)
tree b07a2ae7476c339540e3adeb3d2254bab99bae91
parent fb8e9b3e8ec9b03399e6cd0d47a9d08976b71ed7 (diff)
tdf#41652: Variable width NBSP
Adds a flag that when enabled (opt-in for both old and new documents) changes behaviour of NBSP to not be strictly fixed width.

This commit also implements this behaviour such that NBSP has always the width of a standard space (0x20) on the given line. This change is only noticeable when the paragraph is justified.

Lastly a tilde or a degree character is now shown in place of NBSP when nonprintable characters are enabled, since the gray field alone is not visible in many circumstances.

Change-Id: Iabb30b5930ced62691cc4304f60c5e6dc886ed61
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149576
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Comment 6 László Németh 2023-11-28 18:49:30 UTC
Fixed in https://gerrit.libreoffice.org/c/core/+/160054
Comment 7 Commit Notification 2023-11-29 09:16:55 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/78872cc81bf4b1377c9cae8f9040a2443d0690c0

tdf#157768 sw: fix lost character background of NBSP

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 László Németh 2023-11-29 09:18:34 UTC
@Phv & all: thanks for the bug report and feedback!
Comment 9 Xisco Faulí 2023-11-29 10:39:56 UTC
Hi László,
Something is weird here. The original patch was reverted for 7.6 branch in a344f4ef39e59b8be5007531b6dd776d156c297e. However, the reporter is reproducing the issue in LibreOffice Writer 7.6.2.1.
Comment 10 László Németh 2023-11-29 10:52:11 UTC
(In reply to Xisco Faulí from comment #9)
> Hi László,
> Something is weird here. The original patch was reverted for 7.6 branch in
> a344f4ef39e59b8be5007531b6dd776d156c297e. However, the reporter is
> reproducing the issue in LibreOffice Writer 7.6.2.1.

Hi Xisco,

It seems, that part was not reverted, SwExpandPortion::Paint is still conditional (that is the regression): 

https://gerrit.libreoffice.org/c/core/+/153467/4/sw/source/core/text/porexp.cxx
Comment 11 Xisco Faulí 2023-11-29 10:54:02 UTC
(In reply to László Németh from comment #10)
> (In reply to Xisco Faulí from comment #9)
> > Hi László,
> > Something is weird here. The original patch was reverted for 7.6 branch in
> > a344f4ef39e59b8be5007531b6dd776d156c297e. However, the reporter is
> > reproducing the issue in LibreOffice Writer 7.6.2.1.
> 
> Hi Xisco,
> 
> It seems, that part was not reverted, SwExpandPortion::Paint is still
> conditional (that is the regression): 
> 
> https://gerrit.libreoffice.org/c/core/+/153467/4/sw/source/core/text/porexp.
> cxx

Yes, I noticed that as well. I'm working on it...
Comment 12 Commit Notification 2023-11-29 16:46:46 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/88004761916bffd780bd5a1d6e0f744c23d5be4f

tdf#157768: revert missing parts in 7.6 branch

It will be available in 7.6.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.